# tiledscreen

./: .gitignore  .gitmodules  CMakeLists.txt  Messages.sh  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: 404.html  README.md  _config.yml  about.markdown  changelog.markdown  docs.markdown  download.markdown  store.markdown
docs/_includes/: nav.html
docs/_layouts/: home.html  page.html
docs/_sass/: code.scss  main.scss
docs/_tiles/: com.github.kavinunethsara.binaryclock.markdown
docs/assets/css/: styles.css  styles.css.map
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  KickerModel.qml  Sidebar.qml  ToolBar.qml  main.qml
package/contents/ui/Components/: AppDelegate.qml  AppView.qml  Card.qml  Category.qml  FormIconDelegate.qml  LocationItem.qml  PowerButton.qml  ToolbarButton.qml
package/contents/ui/Components/Tile/: CategoryTile.qml  ConfigEntry.qml  ConfigWindow.qml  Editor.qml  ErrorDialog.qml  Grid.qml  HoverOutlineEffect.qml  IconSelector.qml  IconTile.qml  Tile.qml  TileSelector.qml
package/contents/ui/Components/Tutorial/: AddTile.qml  EditTile.qml  GetNew.qml  Guide.qml  JumpIn.qml  NewTile.qml  Page.qml  (+1 more)
package/contents/ui/config/: ConfigAppearance.qml  ConfigGeneral.qml
site/: _config.yml  changelog.markdown  download.markdown  index.markdown  store.markdown
site/_includes/: nav.html  navlink.html
site/_layouts/: home.html  page.html  post.html
site/_tiles/: com.github.kavinunethsara.calendar.markdown
(+46 files in other folders)
